--- a/main.html
+++ b/main.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
+	  <form>
+		<h3 id="url">https://localhost:8080/</h3>
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name"><br><br>
+  <label for="year">Year:</label>
+  <input type="number" id="year" name="year"><br><br>
+  <button type="submit" id="button"  onclick="titleUpdate(event)">Submit</button>
+</form>
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
